# runge-kutta-benchmark

./: .gitignore  Benchmarker.cpp  CMakeLists.txt  Main.cpp  Makefile  README  RungeKuttaBenchmark  cmake_install.cmake
benchmarkers/: Benchmark.cpp  Benchmarker.cpp  CBenchmark.cpp  CUDABenchmark.cpp  Statistics.cpp
core/: DataSet.cpp  Fiber.cpp
core/cpp/: RKCKernel.cpp
core/cuda/: RKCUDAKernel.cu
fixtures/: Fixture.cpp
fixtures/cpp/: CStraightFixture.cpp
fixtures/cuda/: CUDAStraightFixture.cu
include/: Benchmark.h  Benchmarker.h  CBenchmark.h  CStraightFixture.h  CTimer.h  CUDABenchmark.h  CUDAStraightFixture.h  CUDATimer.h  DataSet.h  Fiber.h  Fixture.h  RKCKernel.h  RKCUDAKernel.h  RungeKutta.h  Statistics.h  Timer.h  rkb_types.h
timers/: CTimer.cpp  CUDATimer.cu  Timer.cpp
